docs(jdk-only): "benign by coercion" was a claim about one slot, used to wave off a family
The `HashMap` family row carried "known-benign — coercion-to-null lands the
real bytecode in the null-initialised state it expects" since the census was
first taken. That is true of slot 1 (`AbstractMap.values`) and it is why the
8,342-hit row was harmless in OUTCOME. It is not true of the slot next to it:
the same fabricated model puts the bucket array in slot 0,
`AbstractMap.keySet`, reference over reference — no coercion to make it benign
and no census that could ever report it.

The record now carries what settled it, `probes/MapModelSlotProbe` against
HotSpot 25.0.3+9, including the row that turns it from untidiness into a
defect: after `keySet()` is called HotSpot caches a `HashMap$KeySet` there and
CratonVM still holds `ARRAY[Object]`, so the JDK's `if (ks == null)` lazy init
cannot fire and would hand the caller an `Object[]` as a `Set`.

Also closes the two residuals the L2 doc left open — L4 gap 3 (its census now
shows no `Properties` slot-3 row, so step 3 is measured rather than
unit-tested) and gap 2's `HashMap` half — and marks the L2 bullet that says
"slot 0 always" as superseded, since that second store is exactly what this
lane removed.

The generalisation is written down rather than left implicit: when a model is
written over a real layout, ask what EVERY slot of it lands on, with `javap -p`
and a reflective probe. A per-slot value-kind argument does not transfer to the
slot next door.